@@ -9,11 +9,12 @@
 - New NXSL function sha256
 - Fixed broken nxagent.sms SMS driver
 - Added support for SNMP traps over IPv6
+- Switched to SHA-256 for password hashing
 - Management console:
 	- Fixed broken VPN connectors configuration
 	- "Inverted values" option on line charts
 	- Filter in predefined graphs tree
-- Fixed issues: #816, #817
+- Fixed issues: #797, #816, #817
 
 
 *
